--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -1,4 +1,5 @@
 @page "/fetchdata"
+@using BlazorApp.Shared 
 @inject HttpClient Http
 
 <h1>Weather forecast</h1>
@@ -41,16 +42,5 @@ else
     {
         // forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
         forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("/api/WeatherForecast");
-    }
-
-    public class WeatherForecast
-    {
-        public DateTime Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public string Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
     }
 }
